호스트를 자동으로 식별하도록 수정

--- a/collectd.conf
+++ b/collectd.conf
@@ -12,7 +12,7 @@
 # Global settings for the daemon.                                            #
 ##############################################################################
 
-Hostname "192.168.0.50"
+#Hostname "192.168.0.110"
 #FQDNLookup true
 #BaseDir "/var/lib/collectd"
 #PluginDir "/usr/lib/collectd"
