--- a/influxdb.conf
+++ b/influxdb.conf
@@ -39,7 +39,7 @@ bind-address = ":8088"
   advance-period = "30m0s"
 
 [admin]
-  enabled = true
+  enabled = false
   bind-address = ":8083"
   https-enabled = false
   https-certificate = "/etc/ssl/influxdb.pem"
